--- a/common/build.gradle
+++ b/common/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    api'com.android.support:recyclerview-v7:28.0.0'
 
     //网络框架
     implementation 'com.lzy.net:okgo:3.0.4'
