--- a/solutionprovider/src/main/AndroidManifest.xml
+++ b/solutionprovider/src/main/AndroidManifest.xml
@@ -1,2 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.xrross.solutionprovider" />
+    package="com.xrross.solutionprovider">
+
+    <application
+        android:theme="@style/AppTheme">
+        <activity android:name=".ui.AppListActivity"
+            ></activity>
+    </application>
+
+</manifest>
